@@ -903,9 +903,8 @@ class MiniDLexer(RegexLexer):
             (r'(as|break|case|class|catch|continue|coroutine|default'
              r'|do|else|finally|for|foreach|function|global'
              r'|if|import|in|is|local|module|return|super|switch'
-             r'|this|throw|try|vararg|while|with|yield)', Keyword
-            ),
-            (r'(false|true|null)', Keyword.Constant),
+             r'|this|throw|try|vararg|while|with|yield)\b', Keyword),
+            (r'(false|true|null)\b', Keyword.Constant),
             # FloatLiteral
             (r'([0-9][0-9_]*)?\.[0-9_]+([eE][+\-]?[0-9_]+)?', Number.Float),
             # IntegerLiteral
